--- a/NotebookParaAvaliaçãoV1.ipynb
+++ b/NotebookParaAvaliaçãoV1.ipynb
@@ -36,20 +36,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yqMOuhiIfezO",
-        "outputId": "24aa6053-15ff-42d1-ba00-567e135087d9"
+        "outputId": "8a66951d-f4ff-4e77-e734-b80b1325c394"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Diretório já existe!\n"
+            "Cloning into 'imgcourse'...\n",
+            "remote: Enumerating objects: 40, done.\u001b[K\n",
+            "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Total 40 (delta 9), reused 20 (delta 2), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (40/40), 6.96 MiB | 19.97 MiB/s, done.\n",
+            "Resolving deltas: 100% (9/9), done.\n"
           ]
         }
       ],
@@ -60,6 +66,15 @@
         "else:\n",
         "  !git clone https://github.com/mhsacampos/imgcourse"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Colocar o código nas próximas células para desenvolvimento dos exercícios de avaliação"
+      ],
+      "metadata": {
+        "id": "FDXv2DFAf_tp"
+      }
     },
     {
       "cell_type": "code",
@@ -74,43 +89,35 @@
         "# Passo 2: Converter para tons de cinza\n",
         "tons_de_cinza = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
         "\n",
-        "# Passo 3: Equalizar a imagem\n",
-        "imagem_equalizada = cv2.equalizeHist(tons_de_cinza)\n",
-        "# Passo 4: Calcular média e desvio padrão da imagem equalizada\n",
-        "media_equalizada = np.mean(imagem_equalizada)\n",
-        "desvio_padrao_equalizado = np.std(imagem_equalizada)\n",
+        "# Passo 3: Obter o espectro de Fourier no domínio da frequência\n",
+        "espectro = np.fft.fft2(tons_de_cinza)\n",
         "\n",
-        "# Exibindo os valores calculados\n",
-        "print(\"A média da imagem equalizada é:\", media_equalizada)\n",
-        "print(\"O desvio padrão da imagem equalizada é:\", desvio_padrao_equalizado)"
+        "# Passo 4: Obter o logaritmo neperiano do espectro\n",
+        "espectro_log = np.log1p(np.abs(espectro))\n",
+        "\n",
+        "# Passo 5: Calcular o valor médio\n",
+        "valor_medio = np.mean(espectro_log)\n",
+        "\n",
+        "# Exibindo o valor médio calculado\n",
+        "print(\"O valor médio do logaritmo neperiano do espectro é:\", valor_medio)\n"
       ],
       "metadata": {
-        "id": "zg5Hvx18nHlz",
-        "outputId": "316d4324-1ac6-4dcb-b899-a7b3e4103372",
+        "id": "0w38L4DgkV2T",
+        "outputId": "c445cf35-1527-470d-ba13-5376a9024e48",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A média da imagem equalizada é: 128.50994491577148\n",
-            "O desvio padrão da imagem equalizada é: 73.2617727999835\n"
+            "O valor médio do logaritmo neperiano do espectro é: 8.08715488572519\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Colocar o código nas próximas células para desenvolvimento dos exercícios de avaliação"
-      ],
-      "metadata": {
-        "id": "FDXv2DFAf_tp"
-      }
     }
   ]
 }
